--- a/WPT-Updater.csproj
+++ b/WPT-Updater.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>WPT_Updater</RootNamespace>
     <Nullable>enable</Nullable>
