--- a/App.config
+++ b/App.config
@@ -2,5 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="Firstrundone" value="false"/>
+		<add key="Profile" value="2"/>
 	</appSettings>
 </configuration>
