--- a/App.config
+++ b/App.config
@@ -3,5 +3,6 @@
 	<appSettings>
 		<add key="Firstrundone" value="false"/>
 		<add key="Profile" value="1"/>
+		<add key="Downloadpath" value=""/>
 	</appSettings>
 </configuration>
