--- a/App.config
+++ b/App.config
@@ -3,6 +3,6 @@
 	<appSettings>
 		<add key="Firstrundone" value="false"/>
 		<add key="Profile" value="1"/>
-		<add key="Downloadpath" value="C:\Users\Elias\Desktop\"/>
+		<add key="Downloadpath" value=""/>
 	</appSettings>
 </configuration>
